<resources>
    <string name="app_name">E-Surat</string>
    <string name="app_name_list">Daftar Surat</string>
    <string name="app_name_detail">Detail Surat</string>
    <string name="app_name_account">Akun</string>

    <string name="app_name_pdam">PDAM Taman Sari</string>
    <string name="app_name_kota">Kota Madiun</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="logo">Logo</string>
    <string name="button_lihatSurat">Lihat Surat</string>
    <string name="button_uploadFile">Upload File</string>
    <string name="search_home">Cari Surat</string>
    <string name="button_statusSelesai">Selesai</string>

    <string name="perihal">Perihal</string>
    <string name="dari">Dari</string>
    <string name="tanggal_terima">Tanggal Terima</string>
    <string name="status">Status</string>
    <string name="no_agenda">No Agenda</string>
    <string name="no_surat">No Surat</string>
    <string name="sifat">Sifat</string>
    <string name="tanggal_surat">Tanggal Surat</string>
    <string name="keterangan">Keterangan</string>

    <string name="more">Lebih Lengkap</string>
    <string name="logout">Keluar</string>
    <string name="account">Akun</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <string name="jabatan">Jabatan</string>
    <string name="id_induk">ID Induk</string>
    <string name="no_hp">NO HP</string>

    <string name="selesai_info_success">Status surat berhasil dirubah menjadi selesai.</string>
    <string name="selesai_info_failed">Status surat gagal dirubah menjadi selesai.</string>
    <string name="login_failed">Login failed</string>
    <string name="upload_balasan_info_success">Surat balasan berhasil diunggah</string>
    <string name="upload_balasan_info_failed">Surat balasan gagal diunggah</string>

    <string name="download_surat_info_success">Surat berhasil diunduh</string>
    <string name="download_surat_info_failed">Surat tidak dapat diunduh</string>

    <!--<string name="re_enter_password">Re-enter Password</string>
            <string name="mobile_number">Mobile Number</string>
            <string name="address">Address</string>
            <string name="name">Name</string>
            <string name="create_account">Create Account</string>
            <string name="already_a_member_login">Already a member? Login</string>
            <string name="no_account_yet_create_one">No account yet? Create one</string>-->

</resources>
