<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="home"
            type="com.example.esurat.home.HomeModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!--TextView No Judul-->
        <TextView
            android:id="@+id/activity_home_detail_textView_judul"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_noSurat"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_noSurat"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_noSurat"
            android:text="@string/perihal"
            tools:text="Perihal" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.perihal}"
            android:textAlignment="viewStart"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_judul"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_noSurat"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_noSurat"
            tools:text="Dummy judul" />

        <!--TextView No Agenda-->
        <TextView
            android:id="@+id/activity_home_detail_textView_noAgenda"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/no_agenda"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Nomor Agenda" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_noAgenda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@{home.noAgenda}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_noAgenda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_home_detail_textView_noAgenda"
            tools:text="Dummy No Agenda" />

        <!--TextView No Surat-->
        <TextView
            android:id="@+id/activity_home_detail_textView_noSurat"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/no_surat"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_noAgenda"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_noAgenda"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_noAgenda"
            tools:text="No Surat" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_noSurat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.noSurat}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_noSurat"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_noAgenda"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_noAgenda"
            tools:text="Dummy No Surat" />

        <!--TextView Sifat-->
        <TextView
            android:id="@+id/activity_home_detail_textView_sifat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sifat"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_status"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_status"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_status"
            tools:text="Sifat" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_sifat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.sifat}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_sifat"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_status"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_status"
            tools:text="Dummy Sifat" />

        <!--TextView Tanggal Surat-->
        <TextView
            android:id="@+id/activity_home_detail_textView_tanggalSurat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/tanggal_surat"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_dari"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_dari"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_dari"
            tools:text="Tanggal Surat" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_tanggalSurat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.tanggalSurat}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_tanggalSurat"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_dari"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_dari"
            tools:text="Dummy Tanggal Surat" />

        <!--TextView Tanggal Terima-->
        <TextView
            android:id="@+id/activity_home_detail_textView_tanggalTerima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tanggal_terima"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_tanggalSurat"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_tanggalSurat"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_tanggalSurat"
            tools:text="Tanggal Terima" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_tanggalTerima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.tanggalTerima}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_tanggalTerima"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_tanggalSurat"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_tanggalSurat"
            tools:text="Dummy Tanggal Terima" />

        <!--TextView Dari-->
        <TextView
            android:id="@+id/activity_home_detail_textView_dari"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dari"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_judul"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_judul"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_judul"
            tools:text="Dari" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_dari"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.dari}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_dari"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_judul"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_judul"
            tools:text="Dummy Dari" />

        <!--TextView Status-->
        <TextView
            android:id="@+id/activity_home_detail_textView_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_tanggalTerima"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_tanggalTerima"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_tanggalTerima"
            tools:text="Status" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.status}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_status"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_tanggalTerima"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_tanggalTerima"
            tools:text="Dummy Status" />

        <!--TextView Keterangan-->
        <TextView
            android:id="@+id/activity_home_detail_textView_keterangan"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="64dp"
            android:text="@string/keterangan"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_sifat"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_sifat"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_detail_textView_sifat"
            tools:text="Keterangan" />

        <TextView
            android:id="@+id/activity_home_detail_textView_value_keterangan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{home.keterangan}"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_textView_keterangan"
            app:layout_constraintEnd_toEndOf="@+id/activity_home_detail_textView_value_sifat"
            app:layout_constraintStart_toStartOf="@+id/activity_home_detail_textView_value_sifat"
            tools:text="Dummy Keterangan" />

        <Button
            android:id="@+id/activity_home_detail_button_lihatSurat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@color/info"
            android:drawableTop="@drawable/ic_chrome_reader_mode_white_24dp"
            android:padding="16dp"
            android:text="@string/button_lihatSurat"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_home_detail_button_uploadFile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/activity_home_detail_button_uploadFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@color/info"
            android:drawableTop="@drawable/ic_file_upload_white_24dp"
            android:padding="16dp"
            android:text="@string/button_uploadFile"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_button_lihatSurat"
            app:layout_constraintEnd_toStartOf="@+id/activity_home_detail_button_statusSelesai"
            app:layout_constraintStart_toEndOf="@+id/activity_home_detail_button_lihatSurat" />

        <Button
            android:id="@+id/activity_home_detail_button_statusSelesai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/info"
            android:drawableTop="@drawable/ic_check_white_24dp"
            android:padding="16dp"
            android:text="@string/button_statusSelesai"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_detail_button_uploadFile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_home_detail_button_uploadFile" />

    </android.support.constraint.ConstraintLayout>

</layout>